docs/versions/0.7.5/website/src/content/docs/ja/windows-beta.mdx
---
title: Windows ベータ
description: ネイティブ Windows 対応の状況、サポートされるワークフロー、既知の制限。
---

ネイティブ Windows 対応は実験的ベータです。

Windows 上の Herdr は、Herdr が本来前提としていた Unix の PTY モデルではなく、ConPTY と Windows のプロセス/ランタイム挙動を使います。Herdr の機能には Windows にきれいに対応付くものもあれば、そうでないものもあります。このプレビューは、すべての Linux/macOS 機能が Windows で完全にサポートされることを約束するものではありません。

ベータの目的は実際の使用から学ぶことです: インストールの成功率、ペインの信頼性、エージェントのワークフロー、バグの量、不足している機能、そして Windows ユーザーが Herdr から十分な価値を得られているかどうか。そのフィードバックに基づき、Windows 対応は安定版に昇格するか、成熟するまでプレビュー限定のままか、メンテナンスコストに見合わなければ縮小される可能性があります。

ネイティブ Windows ベータビルドは PowerShell でインストールします:

```powershell
powershell -ExecutionPolicy Bypass -c "irm https://herdr.dev/install.ps1 | iex"
```

Windows ベータビルドはプレビューチャンネルでのみ提供されます。Windows では Herdr が設定を変更せずにデフォルトでプレビューを使います。インストーラーはリリースを `%USERPROFILE%\.herdr\packages\standalone\releases` に保存し、`%LOCALAPPDATA%\Programs\Herdr\bin` を現在のリリースに向け、実行中のプロセスがアップデートを妨げないよう少数の古いリリースを保持します。

内部ベータテスト向けに、`HERDR_MANIFEST_URL` でインストーラーを Herdr の安定版/プレビューマニフェストではなくカスタムマニフェストに向けられます。

## ベータでサポート

| 機能 | 状況 |
| --- | --- |
| ローカル永続セッション | ベータ |
| ConPTY によるネイティブペイン | ベータ |
| Windows Terminal / PowerShell アプリからのアタッチ | ベータ |
| `cmd.exe` ペイン | ベータ |
| 起動時 cwd とワークスペースラベル | ベータ |
| ペイン起動時の cwd | ベータ |
| エージェントコマンドの発見 | ベータ |
| エージェントのセルフレポートインテグレーション | ベータ |
| エージェントのプロセスツリー検出 | ベータ |
| 既知の cwd からの Git/worktree 検出 | ベータ |
| プラグイン | プレビュー |
| ペイン画面履歴 | ベータ |
| ネストされた起動のオーバーライド | ベータ |

Windows のエージェントプロセス検出は、ペインのシェルの子孫プロセスをスキャンし、直接のエージェントと一般的なコマンドラッパーを認識します。Codex、Claude などのエージェントには有用ですが、Unix のフォアグラウンドプロセスグループ検出と同じものではありません。

プラグインは、プレビューとしてマニフェストのプラットフォームに `windows` をサポートします。GitHub インストール、ローカルリンク、ビルドコマンド、アクション、イベント、プラグインペインは Windows ではベストエフォートです。コマンドは argv 形式で Windows 互換である必要があります。`npm`、`bun`、`node` のような Node パッケージの shim は `PATH` にあれば動作するはずですが、`sh` や Bash を使う Unix 専用の例には Windows 向けの代替が必要です。プラットフォームフィルターは、未サポートのビルドコマンドをスキップし、未サポートのアクションやペインには `platform_unsupported` を返します。

## 部分的なサポート

| 機能 | 状況 |
| --- | --- |
| シェルで `cd` した後のライブ cwd | 部分的 |
| シェルインテグレーション/OSC7 によるライブ cwd | ベータ |
| エージェントへのクリップボード画像貼り付け | 未検証 |
| CJK IME の変換候補位置 | 部分的 |
| Kitty graphics のレンダリング | 未検証 |
| ホストカーソル描画 | 部分的 |

Herdr はペインを正しいディレクトリで起動でき、Herdr を起動したディレクトリから最初のワークスペースを作成できます。起動後の PowerShell のディレクトリ変更は別問題です: Herdr が調べられるプロセスのフィールドは、その後の論理的な `cd` の変化を確実には追跡しません。ライブ cwd の報告には Herdr インテグレーションかプロンプトのシェルインテグレーションを使ってください。

Windows Terminal は特定のエージェント向けに画像貼り付け経路をサポートしているかもしれませんが、Herdr 自身のクリップボード画像リーダーはまだ Windows に配線されていません。Windows のクリップボードブリッジが実装・テストされるまで、`alt+v` の画像貼り付けは未検証として扱ってください。リモートクリップボードの画像ブリッジは別機能で、引き続き Unix/macOS の `herdr --remote` に紐づいています。

Kitty graphics は実験的なままで、まだ Windows でのサポートを謳っていません。Windows Terminal での画像レンダリングを特にテストしているのでない限り、`experimental.kitty_graphics = false` のままにしてください。

## 既知の注意点

### カーソル描画

Herdr はネイティブ Windows のペインに ConPTY を使用します。現在の Windows のターミナルカーソル処理では、マルチプレクサーが画面を再描画している途中のカーソル位置が表示されることがあります。そのため、出力中にネイティブカーソルがちらついたり、ジャンプしたり、古い位置に一瞬残ったりします。この挙動は他のネイティブ Windows ターミナルマルチプレクサーや、VT カーソル位置を直接連続更新するテストでも再現するため、ネイティブカーソルの挙動を維持したまま Herdr 側で完全に解消することはできません。

視覚的な安定性を優先するため、デフォルトの `host_cursor = "auto"` はネイティブ Windows と WSL で Herdr のカーソルを端末セルの内容として描画します。それ以外の Linux と macOS クライアントでは、引き続きネイティブの端末カーソルを使います。Windows の描画カーソルは安定していて点滅しませんが、外側ターミナルのネイティブな点滅、形状、カーソル色は反映されません。

描画カーソルは、Windows が IME の変換中テキストや候補ウィンドウの位置決めに使う実際のカーソルではありません。そのため、韓国語、日本語、中国語 IME の UI が誤った位置に表示されることがあります。この問題が発生する場合は、外側ターミナルのカーソルを有効にしてください:

```toml
[ui]
host_cursor = "native"
```

ネイティブモードでは IME の基準位置が正しくなりますが、出力中にカーソルのちらつき、ジャンプ、古い位置の残像が再び発生することがあります。これは現在の Windows ベータにおける互換性上のトレードオフです。

### キーボードとマウス

Windows のターミナルは、修飾キー付きのキーをすべて同じ形で報告するわけではありません。Herdr は Windows Terminal と Windows 上の Alacritty ではマウス報告と `ctrl+j` を保持しますが、`shift+enter` は外側ターミナルが修飾付き Enter として区別して報告する場合にだけ動作します。Windows またはターミナルがそれを通常の Enter として報告する場合、Herdr は通常の Enter を転送します。

## コピーと貼り付け

Herdr のペインテキストコピーは Windows ベータで動作します。ペイン内でテキストをドラッグ選択すると Herdr 経由でコピーされます。

テキストの貼り付けには Windows Terminal で `ctrl+shift+v` を使ってください。複数行テキストの貼り付けはブラケット付きなので、シェルやエージェントのプロンプトは各行を個別に送信せず、ひとつの貼り付けとして受け取ります。`shift` を押しながら右クリックすると、クリックを Herdr に送らずに外側ターミナルの貼り付けアクションを使えます。

## Windows ベータで未サポート

| 機能 | 状況 |
| --- | --- |
| ダイレクトターミナルアタッチ | 未サポート |
| Windows バイナリからの `herdr --remote` | 未サポート |
| ライブサーバーハンドオフ | 未サポート |
| Unix ファイルディスクリプタのハンドオフ | 未サポート |
| Unix フォアグラウンドプロセスグループ | 未サポート |
| リモートクリップボード画像ブリッジ | 未サポート |
| プレフィックスによる入力ソース切り替え | 未サポート |
| 署名済みバイナリ / SmartScreen 回避 | 未サポート |

Windows からのリモート作業は、サーバーに SSH してそこで `herdr` を実行してください:

```powershell
ssh you@server
herdr
```

このモードでは Herdr はリモートホスト上で動きます。ネイティブ Windows の `herdr --remote` はベータの範囲外です。

Windows のアップデートは Windows インストーラー経由で行われ、バージョン付きインストールジャンクションを更新します。アップデート後は実行中の Herdr セッションを再起動してください。ライブハンドオフは Unix 専用です。

## Windows ベータの問題を報告する

以下を含めてください:

- Herdr のバージョン。
- Windows のバージョン。
- ターミナルアプリ。
- シェル (PowerShell、cmd など)。
- 名前付き `HERDR_SESSION` を使っていたかどうか。
- 関連する Herdr のログ。
- 正確な再現手順。
